<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.UI.FragmentSingInPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sing_in_pec"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43091655" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3">

        <TextView
            style="@style/SignInTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_your_groceries_with_nectar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/contre_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="+20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/GetStartedButton_welcomePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70.5dp"
            android:layout_marginVertical="10dp"
            android:paddingVertical="10dp"
            android:text="Let's Go" />

        <TextView
            style="@style/signInCommentTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="Or connect with social media" />

        <LinearLayout
            style="@style/GoogleButton_signInPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"

                android:src="@drawable/googlelogo" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/GoogleButton"
                style="@style/GoogleButton_signInPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:paddingVertical="15dp"
                android:text="@string/continue_with_google"
                app:layout_constraintTop_toBottomOf="@id/ger_your_gr" />
        </LinearLayout>
    <LinearLayout
        style="@style/FacebookButton_signInPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"

            android:src="@drawable/facebooklogo" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/FacebookButton"
            style="@style/FacebookButton_signInPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:paddingVertical="15dp"
            android:text="@string/continue_with_facebook"
            app:layout_constraintTop_toBottomOf="@id/ger_your_gr" /></LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




